--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Manan-A Techno Surge</title>
     <!-- Bootstrap CSS File-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
   </head>
@@ -51,5 +52,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
