--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
     <section id="aboutus">
       <!-- About US TEXT-->
-    <div class="container"></div>
-    <div class="row"></div>
+    <div class="container">
+    <div class="row">
       <div class="col-sm-12 text-center">
-        <h3>ABOUT US</h3>
+          <h3>ABOUT US</h3>
       </div>
-        <div class="row">
-          <div class="col-sm-12 text-center">
+    </div>
+    <div class="row">
+      <div class="col-sm-12 text-center">
           <p>Manan(Computer Technical club of YMCA)means Deep Intelectual Thinking.It is the group of tech enthusiasts,developers,designers and 
 programmers.It was founded in 2009 by Vipul Bansal who is currently working at Amazon.Continuous workshops and sessions were initiated by our seniors
 Chandan Singh and Rahul Daspal.
@@ -48,8 +49,8 @@ Chandan Singh and Rahul Daspal.
  website, Social messaging app , Utility apps. Alumni  working with Amazon, Oracle, Adobe, Thoughtworks & Hackerearth.
 Manan teams qualified of ACM ICPC  Nationals.</p>
 
-        </div>
       </div>
+    </div>
     </div>
     </section>
 
