--- a/index.html
+++ b/index.html
@@ -62,8 +62,30 @@ Manan teams qualified of ACM ICPC  Nationals.</p>
 
     <section id="footer">
       <!-- Footer -->
-
-
+      <footer>
+      <div class="container">
+        <div class="row">
+           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <div class="row">
+              <div class="col-lg-12 col-md-12 cd-sm-12 cd-xs-12 light">
+                <h1><small>Connect With Us</small></h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+                <img src="img/facebook.png">
+              </div>
+              <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+                <img src="img/github.png">
+              </div>
+            </div>
+           </div>
+           <div class="col-md-6 col-ls-6 vcenter">
+             <img src="img/logo.png">
+           </div>
+        </div>
+      </div>
+      </footer>
     </section>
 
 
