first commit in our inspirations

--- a/index.html
+++ b/index.html
@@ -39,8 +39,70 @@
 
     <section id="inspiration">
       <!-- Our Inspiration Code-->
+      <div class="container">
+          <div class="row">               <!-- row for heading -->
+            <div class="col-md-12 text-center">
+              <h1>Our Inspirations</h1>
+            </div>
+          </div>
 
+          <div class="row">
+            <div class="col-md-4 ">      <!--1st block  -->
+              <div class="row">
+                <div class="col-md-12">
+                   <img class="img-responsive" src="http://qph.is.quoracdn.net/main-thumb-8531686-200-ihukfcvpxzxnwifgzrxhhhtgsnrvvput.jpeg" alt='rahul daspal'>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h2>Rahul</h2>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h2>This is a demo quote for daspal sir.</h2>
+                </div>
+              </div>
+            </div>
 
+            <div class="col-md-4 ">         <!-- 2nd block  -->
+              <div class="row">
+                <div class="col-md-12">
+                   <img class="img-responsive" src="http://qph.is.quoracdn.net/main-thumb-8531686-200-ihukfcvpxzxnwifgzrxhhhtgsnrvvput.jpeg" alt='rahul daspal'>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h2>Rahul</h2>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h2>This is a demo quote for daspal sir.</h2>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 ">     <!-- 3rd block  -->
+              <div class="row">
+                <div class="col-md-12">
+                   <img class="img-responsive" src="http://qph.is.quoracdn.net/main-thumb-8531686-200-ihukfcvpxzxnwifgzrxhhhtgsnrvvput.jpeg" alt='rahul daspal'>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h2>Rahul</h2>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h2>This is a demo quote for daspal sir.</h2>
+                </div>
+              </div>
+            </div>
+
+          </div>
+      </div>
     </section>
 
     <section id="footer">
