H1 tag for heading in about us

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="container">
     <div class="row">
       <div class="col-sm-12 text-center">
-          <h3>ABOUT US</h3>
+          <h1>About Us</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 text-center">
-          <p>Manan(Computer Technical club of YMCA)means Deep Intelectual Thinking.It is the group of tech enthusiasts,developers,designers and 
+          <p>Manan(Computer Technical club of YMCA)means Deep Intelectual Thinking.It is the group of tech enthusiasts,developers,designers and
 programmers.It was founded in 2009 by Vipul Bansal who is currently working at Amazon.Continuous workshops and sessions were initiated by our seniors
 Chandan Singh and Rahul Daspal.
 </p>
