first step in navigation bar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
   <body>
     <section id="navbar">
       <!-- Navigation bar code-->
-
-
+      <div id="header">
+	  	<div id="logo">
+	  		<img src="img/Manan-logo-full.png">
+	  	</div>
+	  	<div id="links">
+			<ul>
+				<li><a href="#aboutus">about</a></li>
+				<li><a href="#inspiration">inspiration</a></li>
+				<li><a href="#">contests</a></li>
+				<li><a href="#">contact</a></li>
+			</ul>	
+	  	</div>
+      </div>
     </section>
 
     <section id="heroimage">
